--- a/docker/localtestenv/otel-collector-config.yaml
+++ b/docker/localtestenv/otel-collector-config.yaml
@@ -31,6 +31,11 @@ processors:
     check_interval: 60s
     limit_mib: 400
     spike_limit_mib: 100
+  resource:
+    attributes:
+      - key: tinfishkey
+        value: ok
+        action: upsert
   resourcedetection:
     detectors: [docker, env, system]
     timeout: 2s
@@ -52,7 +57,7 @@ service:
   pipelines:
     metrics:
       receivers: [prometheus/internal, prometheus, hostmetrics, otlp]
-      processors: [batch, resourcedetection]
+      processors: [batch, resourcedetection, resource]
       exporters: [signalfx]
     traces:
       receivers: [otlp]
